--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 <head>
     <title>Epic Skill Tree</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../lib/bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
-    <link href="../lib/bootstrap/css/bootstrap-responsive.css" rel="stylesheet" media="screen">
-    <link href="../css/main.css" rel="stylesheet"/>
+    <link href="lib/bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
+    <link href="lib/bootstrap/css/bootstrap-responsive.css" rel="stylesheet" media="screen">
+    <link href="css/main.css" rel="stylesheet"/>
 </head>
 <body class=" hasGoogleVoiceExt">
 
@@ -44,8 +44,8 @@
         <div class="span4">...</div>
     </div>
 
-    <script src="../lib/jQuery/jQuery-1.9.0.js"></script>
-    <script src="../lib/bootstrap/js/bootstrap.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="lib/jQuery/jQuery-1.9.0.js"></script>
+    <script src="lib/bootstrap/js/bootstrap.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
