--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,14 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en" ng-app="myApp">
 <head>
+    <meta charset="utf-8">
     <title>Epic Skill Tree</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="lib/bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
     <link href="lib/bootstrap/css/bootstrap-responsive.css" rel="stylesheet" media="screen">
-    <link href="css/main.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="css/app.css"/>
 </head>
-<body class=" hasGoogleVoiceExt">
+<body>
 
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="navbar-inner">
@@ -17,35 +18,27 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </a>
-                <a class="brand" href="#">Epic Skill Tree</a>
+                <a class="brand" href="#initial">Epic Skill Tree</a>
                 <div class="nav-collapse collapse">
                     <ul class="nav">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li class="active"><a href="#/initial">Home</a></li>
+                        <li><a href="#/about">About</a></li>
+                        <li><a href="#/contact">Contact</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
         </div>
     </div>
 
-    <div class="container">
-        <h1>Your one stop (free) shop for learning everything.</h1>
-        <p>Epic Skill Tree is an open source platform that allows user to create skill trees for real life activities.<br/>
-            Other users that want to learn about specific topics can then look up trees related to their<br/>
-            interests and track their progress as they learn.
-        </p>
-    </div> <!-- /container -->
-
-    <div class="row">
-        <div class="span4 offset1">
-            <h2>Popular Trees</h2>
-        </div>
-        <div class="span4">...</div>
-    </div>
+    <div ng-view></div>
 
     <script src="lib/jQuery/jQuery-1.9.0.js"></script>
     <script src="lib/bootstrap/js/bootstrap.js"></script>
-    <script src="js/main.js"></script>
+    <script src="lib/angular/angular.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/services.js"></script>
+    <script src="js/controllers.js"></script>
+    <script src="js/filters.js"></script>
+    <script src="js/directives.js"></script>
 </body>
 </html>
