--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
-<html lang="en" ng-app="myApp">
+<html lang="en" ng-app="EpicSkillTree">
 <head>
     <meta charset="utf-8">
     <title>Epic Skill Tree</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="lib/bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
     <link href="lib/bootstrap/css/bootstrap-responsive.css" rel="stylesheet" media="screen">
+    <link href="lib/popupjs/popup.css" rel="stylesheet" media="screen">
     <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body>
@@ -34,6 +35,7 @@
 
     <script src="lib/jQuery/jQuery-1.9.0.js"></script>
     <script src="lib/bootstrap/js/bootstrap.js"></script>
+    <script src="lib/popupjs/popup.js"></script>
     <script src="lib/angular/angular.js"></script>
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
