Getting rid of openshift merge. Leaving only angular app.

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                 </a>
                 <a class="brand" href="#initial">Epic Skill Tree</a>
                 <div class="nav-collapse collapse">
-                    <ul class="nav">
-                        <li class="active"><a href="#/initial">Home</a></li>
-                        <li><a href="#/about">About</a></li>
-                        <li><a href="#/contact">Contact</a></li>
+                    <ul id="navBarLinkList" class="nav">
+                        <li id="homeLink"><a href="#/initial">Home</a></li>
+                        <li id="aboutLink"><a href="#/about">About</a></li>
+                        <li id="contactLink"><a href="#/contact">Contact</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
@@ -42,5 +42,6 @@
     <script src="js/controllers.js"></script>
     <script src="js/filters.js"></script>
     <script src="js/directives.js"></script>
+
 </body>
 </html>
