Trees now finished. Need to add JSON/HTML parser and nodePopup functionality.

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="lib/bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
     <link href="lib/bootstrap/css/bootstrap-responsive.css" rel="stylesheet" media="screen">
-    <link href="lib/popupjs/popup.css" rel="stylesheet" media="screen">
+    <link href="lib/jOrgChart/jquery.jOrgChart.css" rel="stylesheet" media="screen">
     <link rel="stylesheet" href="stylesheets/app.css"/>
 </head>
 <body>
@@ -34,14 +34,15 @@
     <div ng-view></div>
 
     <script src="lib/jQuery/jQuery-1.9.0.js"></script>
+    <script src="lib/underscore/underscore.js"></script>
     <script src="lib/bootstrap/js/bootstrap.js"></script>
-    <script src="lib/popupjs/popup.js"></script>
+    <script src="lib/bPopup/bPopup.js"></script>
+    <script src="lib/jOrgChart/jquery.jOrgChart.js"></script>
     <script src="lib/angular/angular.js"></script>
     <script src="javascripts/app.js"></script>
     <script src="javascripts/services.js"></script>
     <script src="javascripts/controllers.js"></script>
     <script src="javascripts/filters.js"></script>
     <script src="javascripts/directives.js"></script>
-
 </body>
 </html>
