--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,20 @@
         </div>
     </div>
 
+    <!--<script>-->
+        <!--(function() {-->
+            <!--var cx = '002195830340532567943:m1tewfkvyzu';-->
+            <!--var gcse = document.createElement('script'); gcse.type = 'text/javascript';-->
+            <!--gcse.async = true;-->
+            <!--gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +-->
+                    <!--'//www.google.com/cse/cse.js?cx=' + cx;-->
+            <!--var s = document.getElementsByTagName('script')[0];-->
+            <!--s.parentNode.insertBefore(gcse, s);-->
+        <!--})();-->
+    <!--</script>-->
+
+    <!--<gcse:search></gcse:search>-->
+
     <div ng-view></div>
 
     <script src="lib/jQuery/jQuery-1.9.0.js"></script>
